# Jet

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  package.toml  repo.lua  tsconfig.json
cli/: Cargo.toml
cli/src/: command.rs  main.rs
jet_build/: Cargo.toml
jet_build/src/: lib.rs
jet_core/: Cargo.toml
jet_core/src/: db.rs  lib.rs  utils.rs
jet_core/src/configs/: mod.rs  package.rs  repo.rs
jet_core/src/jpk/: mod.rs
jet_install/: Cargo.toml
jet_install/src/: download.rs  lib.rs
jet_uninstall/: Cargo.toml
jet_uninstall/src/: lib.rs
jet_update/: Cargo.toml
jet_upgrade/: Cargo.toml
jet_upgrade/src/: lib.rs
jet_upgrade/src/utils/: download.rs
src/: index.ts  main.rs  package.rs  repo.rs
src/commands/: install.rs  mod.rs  pack.rs  upgrade.rs
src/lib/: download.rs  mod.rs  new.ts  read_repo.rs  version.rs
