[package]
name = "jet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.8"
toml = "0.5.9"
serde = { version = "1.0.145", features = ["derive"] }
archiver-rs = "0.5.1"
flate2 = "1.0.24"
tar = "0.4.38"