[package]
name = "jet_install"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
indicatif = "0.17.5"
jet_core = { version = "0.1.0", path = "../jet_core" }
nanoid = "0.4.0"
reqwest = "0.11.18"
