[package]
name = "jet_upgrade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
futures-util = "0.3.28"
indicatif = "0.17.5"
jet_core = { version = "0.1.0", path = "../jet_core" }
reqwest = { version = "0.11.18", features = ["stream"]}
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }
